fix: update table style, avoid extra padding for rtd

--- a/static/css/contents/table.css
+++ b/static/css/contents/table.css
@@ -7,7 +7,7 @@
   border-radius: 6px;
 }
 
-.yue .table-wrapper > table {
+.yue .table-wrapper table {
   margin: 0;
 }
 
